# pokemare

./: .gitignore  README.md  launcher.py  pyproject.toml  requirements.txt  sqlite3_to_mysql.py
cogs/: admin.py  errors.py  games.py  general.py  help.py  leaderboards.py
core/: bot.py
data/: pokemons.json  songs.json  trivia.json  wtp.json
database/: __init__.py  gtp_stats.py  user.py
docs/: index.md
pokemare/: bot.py  database.py  mail.py  songs.py  trivia.py  user.py
pokemare/cogs/: games.py  general.py  help.py  leaderboards.py  misc.py  miscs.py  pokedex.py  start.py  tools.py
pokemare/handlers/: __init__.py  guilds.py
pokemare/plugins/: general.py
trash/: info.md
