[tool.poetry]
name = "Pokemare"
version = "0.1"
description = ""
authors = ["sarthak-py <shiva02939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
disnake = "^2.3.1"
aiosqlite = "^0.17.0"
Pillow-PIL = "^0.1dev"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
