[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["sarthak-py <shiva02939@gmail.com>"]
description = ""
name = "Pokemare"
version = "0.1"
[tool.poetry.dependencies]
Pillow-PIL = "^0.1dev"
aiosqlite = "^0.17.0"
disnake = "^2.3.1"
python = "^3.8"
aiohttp = "^3.8.1"
disnake-jishaku = "^2.6.5"
[tool.poetry.dev-dependencies]
black = "^22.1.0"
