[tool.poetry]
name = "pokemare"
version = "0.1.0"
description = ""
authors = ["sarthhh <shiva02939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
disnake = "^2.5.1"
aiomysql = "^0.1.1"
python-dotenv = "^0.20.0"
disnake-jishaku = "^2.6.5"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
